# fortune-slip-generator

./: .jscpd.json  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.config/: nextest.toml
.github/actions/: install_inkscape.yml
.github/actions/install_fonts/: action.yml
.github/actions/install_inkscape/: action.yml
.github/workflows/: github-actions-demo.yml  rust_ci_flow.yml  security_audits.yml
data/: cloud_convert_key  fortune_settings.yaml  please_read_me.txt
data/figma_template/: omikuji_template.fig
data/fonts/Dosis/: OFL.txt
data/fonts/Hina_Mincho/: OFL.txt
data/fonts/Kaushan_Script/: OFL.txt
data/fortune_data/: fortune_settings.yaml
data/fortune_data/text/: general_fortunes.yaml  health_fortunes.yaml
data/fortune_text/: ambition_fortunes.yaml  financial_fortunes.yaml  general_fortunes.yaml  health_fortunes.yaml  love_fortunes.yaml
script_utils/: Cargo.toml
script_utils/src/: main.rs
src/: cli.rs  constants.rs  error.rs  file_manip.rs  fortune.rs  fortune_request_body.json  fortunes.rs  lib.rs  main.rs  pdf.rs  svg.rs  write_options.rs
src/cli/: checks.rs  windows.rs
src/file_manip/: merge_pdf.rs  svg_converter.rs
src/fortune/: fortune_data.rs  fortune_loader.rs  fortune_slip_writer.rs  fortune_slips.rs  fortune_splitter.rs  fortune_template.rs  fortune_writer.rs
src/fortune/fortune_data/: fortune_loader.rs  fortune_settings.rs
src/fortune/fortune_slip_writer/: svg_keys.rs
src/fortune/fortune_slips/: data_error.rs
src/fortune/fortune_template/: text_elem.rs
src/fortune/fortune_writer/: elem_utils.rs  fortune_slip_svg.rs
src/fortunes/: fortune_reader.rs
src/old_files/: svg_loader_xml.rs
src/old_files/svg_editor/: serde_test.rs  svg_editor.rs  svg_event.rs  xml_parser.rs
src/pdf/: merge_pdf.rs
src/svg/: svg_editor.rs  svg_file.rs  svg_to_pdf.rs
src/svg/svg_editor/: text_elem.rs  xml_elem_utils.rs  xml_tree.rs  xml_tree_wrapper.rs
test_utils/: Cargo.toml
test_utils/data/: fortune_settings.yaml  invalid_fortune_settings.yaml
test_utils/data/fortune_text/: general_fortunes.yaml  health_fortunes.yaml  love_fortunes.yaml
test_utils/src/: lib.rs
tests/: integration_test.rs
