[package]
name = "fortune_generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "test_utils",
]

[dev-dependencies]
test_utils = { path = "test_utils" }
rstest = "0.17.0"

[dependencies]
rand = "0.8.5"
serde_yaml = "0.9.16"
serde = { version = "1.0.151", features = ["derive"] }
lopdf = "0.29.0"
xml-rs = "0.8.4"
anyhow = "1.0.70"
tempfile = "3.5.0"
thiserror = "1.0.40"
xmltree = "0.10.3"
