[package]
name = "fortune_generator"
author = "Joost Visser"
about = "Generates a PDF with a fortune slips"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "test_utils",
    "script_utils"
]

[dev-dependencies]
test_utils = { path = "test_utils" }
rstest = "0.17.0"
pretty_assertions = "1.3.0"

[dependencies]
rand = "0.8.5"
serde_yaml = "0.9.21"
serde = { version = "1.0.164", features = ["derive"] }
lopdf = "0.31.0"
xml-rs = "0.8.14"
anyhow = "1.0.71"
tempfile = "3.6.0"
xmltree = "0.10.3"
rayon = "1.7.0"
itertools = "0.11.0"
env_logger = "0.10.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
maplit = "1.0.2"
figlet-rs = "0.1.5"
owo-colors = "3.5.0"
which = "4.4.0"
font-loader = "0.11.0"
indoc = "2.0.2"
clap = { version = "4.3.11", features = ["derive"] }
