[package]
name = "fortune_generator"
authors = ["Joost Visser"]
description = "A fortune generator that generates a PDF with fortune slips."
version = "1.0.2"
edition = "2021"

[workspace]
members = [
    "test_utils",
    "script_utils"
]

[dev-dependencies]
test_utils = { path = "test_utils" }
pretty_assertions = "1.3.0"
assert_cmd = "2.0.11"
rstest = "0.18.1"

[dependencies]
rand = "0.8.5"
serde_yaml = "0.9.21"
serde = { version = "1.0.164", features = ["derive"] }
lopdf = "0.31.0"
xml-rs = "0.8.14"
anyhow = "1.0.71"
tempfile = "3.6.0"
xmltree = "0.10.3"
rayon = "1.7.0"
itertools = "0.11.0"
env_logger = "0.10.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
maplit = "1.0.2"
figlet-rs = "0.1.5"
owo-colors = { version = "3.5.0", features=["supports-colors"]}
which = "4.4.0"
font-loader = "0.11.0"
indoc = "2.0.2"
clap = { version = "4.3.11", features = ["derive"] }
thiserror = "1.0.43"
enable-ansi-support = "0.2.1"
